Fix header menun spacing

--- a/themes/pattern-lab-starter/dest/style.css
+++ b/themes/pattern-lab-starter/dest/style.css
@@ -6360,7 +6360,7 @@ html {
   }
   .site-header ul.sf-menu.sf-style-white li {
     background: white;
-    margin-right: 60px;
+    margin-right: 50px;
   }
   .site-header ul.sf-menu.sf-style-white li:hover {
     background-color: white;
