--- a/themes/pattern-lab-starter/source/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/themes/pattern-lab-starter/source/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -90,7 +90,7 @@ $small-range: 381px 800px;
 ul.sf-menu.sf-style-white{
    li {
     background: $c-white;
-    margin-right:60px;
+    margin-right:50px;
       &:hover{
         background-color:$c-white;
       }
